patch(flexbox) Fix flexox on mobile safari

--- a/sites/all/themes/jf/src/scss/app/globals/_site.scss
+++ b/sites/all/themes/jf/src/scss/app/globals/_site.scss
@@ -21,6 +21,7 @@ body.loading {
 // flex grid
 .grid {
   @include flexbox();
+  -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
   background: $offwhite;
   // justify-content: center;
